<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@color/agua"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:background="@color/clarito">

        <RelativeLayout
            android:id="@+id/relativeLayoutCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="6dp"
            android:background="@color/rojo">

            <ImageView
                android:id="@+id/imgElementoRecycler"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:foregroundGravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                app:srcCompat="@drawable/ic_carriimagen" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/imgElementoRecycler"
                android:orientation="vertical"
                android:layout_marginRight="4dp"
                android:layout_toRightOf="@id/imgElementoRecycler">

                <TextView
                    android:id="@+id/textViewNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/nombre"
                    android:textColor="@color/clarito"
                    android:textSize="24dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textViewDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/direccion"
                    android:textColor="@color/clarito"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/textViewCierre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/horario_de_cierre"
                    android:textColor="@color/clarito"
                    android:visibility="visible"
                    android:textSize="18dp"/>

                <TextView
                    android:id="@+id/textViewAbierto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/horario_de_apertura"
                    android:textColor="@color/clarito"
                    android:visibility="gone"
                    android:textSize="18dp"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>